--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
   background: #eee;
   font-family: "Nunito SemiBold";
+  margin: 0;
+  padding: 0;
 }
 
 .App {
@@ -11,6 +13,7 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .scripts-table {
@@ -94,4 +97,75 @@ body {
   height: 150px;
   width: 100%;
   resize: none;
+}
+
+/* MODAL */
+.overlay {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  background: rgba(51, 54, 69, .5);
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-hidden {
+  display: none;
+}
+
+.modal {
+  background: #fff;
+  min-width: 460px;
+  height: 120px;
+}
+
+.modal-content {
+  
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  box-shadow: none;
+  color: #fff;
+  padding: 15px 60px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.btn-save {
+  background: #3AB487;
+}
+
+.btn-save:hover {
+  background: #2C8866;
+}
+
+.btn-close {
+  background: #BB7231;
+}
+
+.btn-close:hover {
+  background: #975C28;
+}
+
+.ace-editor {
+  max-height: 150px;
+}
+
+span.edit {
+  color: #2C8866;
 }
